--- a/scilab/modules/boolean/locales/en_US/boolean.pot
+++ b/scilab/modules/boolean/locales/en_US/boolean.pot
@@ -14,5 +14,10 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=ISO-8859-1\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Revision-Date: 2009-10-27 03:43+0100\n"
+"Revision-Date: 2009-11-09 13:39+0100\n"
 
+# File: src/c/matboolean.c, line: 137
+# File: src/c/matboolean.c, line: 141
+#, c-format
+msgid "%s: No more memory.\n"
+msgstr ""
