--- a/scilab/modules/xcos/locales/en_US/xcos.pot
+++ b/scilab/modules/xcos/locales/en_US/xcos.pot
@@ -14,32 +14,38 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=ISO-8859-1\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Revision-Date: 2009-10-27 03:43+0100\n"
+"Revision-Date: 2009-11-09 13:39+0100\n"
 
-# File: macros/generateBlockImages.sci, line: 27
 # File: macros/importScicosPal.sci, line: 27
+# File: macros/generateBlockImages.sci, line: 27
 #, c-format
 msgid "%s: File ''%s'' does not exist.\n"
 msgstr ""
 #
+# File: sci_gateway/cpp/sci_xcosNotify.cpp, line: 80
+# File: sci_gateway/cpp/sci_xcosNotify.cpp, line: 95
 # File: sci_gateway/cpp/sci_Xcos.cpp, line: 76
 # File: sci_gateway/cpp/sci_Xcos.cpp, line: 93
 # File: sci_gateway/cpp/sci_Xcos.cpp, line: 102
-# File: sci_gateway/cpp/sci_xcosNotify.cpp, line: 80
-# File: sci_gateway/cpp/sci_xcosNotify.cpp, line: 95
 #, c-format
 msgid "%s: No more memory.\n"
 msgstr ""
 #
-# File: macros/generateBlockImages.sci, line: 17
 # File: macros/importScicosPal.sci, line: 17
+# File: macros/generateBlockImages.sci, line: 17
 #, c-format
 msgid "%s: Wrong number of input argument(s): %d expected.\n"
 msgstr ""
 #
-# File: sci_gateway/cpp/sci_Xcos.cpp, line: 142
+# File: sci_gateway/cpp/sci_warnBlockByUID.cpp, line: 67
+# File: sci_gateway/cpp/sci_warnBlockByUID.cpp, line: 108
+#, c-format
+msgid "%s: Wrong size for input argument #%d: A string expected.\n"
+msgstr ""
+#
 # File: sci_gateway/cpp/sci_xcosNotify.cpp, line: 59
 # File: sci_gateway/cpp/sci_xcosNotify.cpp, line: 73
+# File: sci_gateway/cpp/sci_Xcos.cpp, line: 142
 #, c-format
 msgid "%s: Wrong type for input argument #%d: A string expected.\n"
 msgstr ""
@@ -52,43 +58,51 @@ msgstr ""
 msgid "About Xcos"
 msgstr ""
 #
-# File: src/java/org/scilab/modules/xcos/utils/XcosMessages.java, line: 147
+# File: src/java/org/scilab/modules/xcos/utils/XcosMessages.java, line: 149
 msgid "Add to"
 msgstr ""
 #
-# File: src/java/org/scilab/modules/xcos/utils/XcosMessages.java, line: 148
+# File: src/java/org/scilab/modules/xcos/utils/XcosMessages.java, line: 150
 msgid "Add to new diagram"
 msgstr ""
 #
-# File: src/java/org/scilab/modules/xcos/utils/XcosMessages.java, line: 157
+# File: src/java/org/scilab/modules/xcos/utils/XcosMessages.java, line: 159
 msgid "Align Blocks"
+msgstr ""
+#
+# File: src/java/org/scilab/modules/xcos/utils/XcosMessages.java, line: 196
+msgid "All rights reserved"
 msgstr ""
 #
 # File: src/java/org/scilab/modules/xcos/utils/XcosMessages.java, line: 98
 msgid "Block Help"
 msgstr ""
 #
-# File: src/java/org/scilab/modules/xcos/utils/XcosMessages.java, line: 55
+# File: src/java/org/scilab/modules/xcos/utils/XcosMessages.java, line: 56
 msgid "Block Parameters"
 msgstr ""
 #
-# File: src/java/org/scilab/modules/xcos/utils/XcosMessages.java, line: 165
+# File: src/java/org/scilab/modules/xcos/utils/XcosMessages.java, line: 167
 msgid "Border Color"
 msgstr ""
 #
-# File: src/java/org/scilab/modules/xcos/utils/XcosMessages.java, line: 162
+# File: src/java/org/scilab/modules/xcos/utils/XcosMessages.java, line: 164
 msgid "Bottom"
 msgstr ""
 #
-# File: src/java/org/scilab/modules/xcos/utils/XcosMessages.java, line: 72
-msgid "Browser"
+# File: src/java/org/scilab/modules/xcos/utils/XcosMessages.java, line: 186
+msgid "CVODE"
 msgstr ""
 #
 # File: src/java/org/scilab/modules/xcos/utils/XcosMessages.java, line: 130
 msgid "Cancel"
 msgstr ""
 #
-# File: src/java/org/scilab/modules/xcos/utils/XcosMessages.java, line: 160
+# File: src/java/org/scilab/modules/xcos/utils/XcosMessages.java, line: 197
+msgid "CeCILL License"
+msgstr ""
+#
+# File: src/java/org/scilab/modules/xcos/utils/XcosMessages.java, line: 162
 msgid "Center"
 msgstr ""
 #
@@ -100,7 +114,7 @@ msgstr ""
 msgid "Code generation"
 msgstr ""
 #
-# File: src/java/org/scilab/modules/xcos/utils/XcosMessages.java, line: 154
+# File: src/java/org/scilab/modules/xcos/utils/XcosMessages.java, line: 156
 msgid "Command port must be connected to control port"
 msgstr ""
 #
@@ -120,20 +134,28 @@ msgstr ""
 msgid "Copy"
 msgstr ""
 #
+# File: src/java/org/scilab/modules/xcos/utils/XcosMessages.java, line: 194
+msgid "Copyright 2009"
+msgstr ""
+#
 # File: src/java/org/scilab/modules/xcos/utils/XcosMessages.java, line: 136
 msgid "Could not save diagram."
 msgstr ""
 #
-# File: src/java/org/scilab/modules/xcos/utils/XcosMessages.java, line: 58
+# File: src/java/org/scilab/modules/xcos/utils/XcosMessages.java, line: 59
 msgid "Create"
 msgstr ""
 #
-# File: src/java/org/scilab/modules/xcos/utils/XcosMessages.java, line: 60
+# File: src/java/org/scilab/modules/xcos/utils/XcosMessages.java, line: 61
 msgid "Customize"
 msgstr ""
 #
 # File: src/java/org/scilab/modules/graph/utils/ScilabGraphMessages.java, line: 19
 msgid "Cut"
+msgstr ""
+#
+# File: src/java/org/scilab/modules/xcos/utils/XcosMessages.java, line: 189
+msgid "Default"
 msgstr ""
 #
 # File: src/java/org/scilab/modules/graph/utils/ScilabGraphMessages.java, line: 27
@@ -144,7 +166,7 @@ msgstr ""
 msgid "Demonstrations Blocks"
 msgstr ""
 #
-# File: src/java/org/scilab/modules/xcos/utils/XcosMessages.java, line: 71
+# File: src/java/org/scilab/modules/xcos/utils/XcosMessages.java, line: 72
 msgid "Details"
 msgstr ""
 #
@@ -152,7 +174,7 @@ msgstr ""
 msgid "Diagram background"
 msgstr ""
 #
-# File: src/java/org/scilab/modules/xcos/utils/XcosMessages.java, line: 68
+# File: src/java/org/scilab/modules/xcos/utils/XcosMessages.java, line: 69
 msgid "Diagram browser"
 msgstr ""
 #
@@ -178,11 +200,11 @@ msgstr ""
 msgid "Do you want to overwrite existing file?"
 msgstr ""
 #
-# File: src/java/org/scilab/modules/xcos/utils/XcosMessages.java, line: 50
+# File: src/java/org/scilab/modules/xcos/utils/XcosMessages.java, line: 51
 msgid "Dump"
 msgstr ""
 #
-# File: src/java/org/scilab/modules/xcos/utils/XcosMessages.java, line: 54
+# File: src/java/org/scilab/modules/xcos/utils/XcosMessages.java, line: 55
 msgid "Edit"
 msgstr ""
 #
@@ -194,11 +216,11 @@ msgstr ""
 msgid "Events"
 msgstr ""
 #
-# File: src/java/org/scilab/modules/xcos/utils/XcosMessages.java, line: 150
+# File: src/java/org/scilab/modules/xcos/utils/XcosMessages.java, line: 152
 msgid "Explicit data input port must be connected to explicit data output port"
 msgstr ""
 #
-# File: src/java/org/scilab/modules/xcos/utils/XcosMessages.java, line: 152
+# File: src/java/org/scilab/modules/xcos/utils/XcosMessages.java, line: 154
 msgid "Explicit data output port must be connected to explicit data input port"
 msgstr ""
 #
@@ -206,7 +228,7 @@ msgstr ""
 msgid "Export"
 msgstr ""
 #
-# File: src/java/org/scilab/modules/xcos/utils/XcosMessages.java, line: 144
+# File: src/java/org/scilab/modules/xcos/utils/XcosMessages.java, line: 146
 msgid "Export to XML"
 msgstr ""
 #
@@ -224,11 +246,15 @@ msgstr ""
 msgid "File"
 msgstr ""
 #
-# File: src/java/org/scilab/modules/xcos/utils/XcosMessages.java, line: 166
+# File: src/java/org/scilab/modules/xcos/utils/XcosMessages.java, line: 168
 msgid "Fill Color"
 msgstr ""
 #
-# File: src/java/org/scilab/modules/xcos/utils/XcosMessages.java, line: 65
+# File: src/java/org/scilab/modules/xcos/utils/XcosMessages.java, line: 179
+msgid "Final inegration time"
+msgstr ""
+#
+# File: src/java/org/scilab/modules/xcos/utils/XcosMessages.java, line: 66
 msgid "Fit diagram to view"
 msgstr ""
 #
@@ -240,7 +266,11 @@ msgstr ""
 msgid "Format"
 msgstr ""
 #
-# File: src/java/org/scilab/modules/xcos/utils/XcosMessages.java, line: 70
+# File: src/java/org/scilab/modules/xcos/utils/XcosMessages.java, line: 203
+msgid "Generating C Code for SuperBlock"
+msgstr ""
+#
+# File: src/java/org/scilab/modules/xcos/utils/XcosMessages.java, line: 71
 msgid "Get infos"
 msgstr ""
 #
@@ -252,23 +282,27 @@ msgstr ""
 msgid "Group"
 msgstr ""
 #
-# File: src/java/org/scilab/modules/xcos/utils/XcosMessages.java, line: 170
+# File: src/java/org/scilab/modules/xcos/utils/XcosMessages.java, line: 172
 msgid "Horizontal"
+msgstr ""
+#
+# File: src/java/org/scilab/modules/xcos/utils/XcosMessages.java, line: 187
+msgid "IDA"
 msgstr ""
 #
 # File: src/java/org/scilab/modules/xcos/utils/XcosMessages.java, line: 139
 msgid "Image contains no data."
 msgstr ""
 #
-# File: src/java/org/scilab/modules/xcos/utils/XcosMessages.java, line: 151
+# File: src/java/org/scilab/modules/xcos/utils/XcosMessages.java, line: 153
 msgid "Implicit data input port must be connected to implicit data output port"
 msgstr ""
 #
-# File: src/java/org/scilab/modules/xcos/utils/XcosMessages.java, line: 153
+# File: src/java/org/scilab/modules/xcos/utils/XcosMessages.java, line: 155
 msgid "Implicit data output port must be connected to implicit data input port"
 msgstr ""
 #
-# File: src/java/org/scilab/modules/xcos/utils/XcosMessages.java, line: 145
+# File: src/java/org/scilab/modules/xcos/utils/XcosMessages.java, line: 147
 msgid "Import from XML"
 msgstr ""
 #
@@ -276,16 +310,28 @@ msgstr ""
 msgid "Integer"
 msgstr ""
 #
+# File: src/java/org/scilab/modules/xcos/utils/XcosMessages.java, line: 181
+msgid "Integrator absolute tolerance"
+msgstr ""
+#
+# File: src/java/org/scilab/modules/xcos/utils/XcosMessages.java, line: 182
+msgid "Integrator relative tolerance"
+msgstr ""
+#
 # File: src/java/org/scilab/modules/graph/utils/ScilabGraphMessages.java, line: 29
 msgid "Invert selection"
 msgstr ""
 #
-# File: src/java/org/scilab/modules/xcos/utils/XcosMessages.java, line: 158
+# File: src/java/org/scilab/modules/xcos/utils/XcosMessages.java, line: 160
 msgid "Left"
 msgstr ""
 #
-# File: src/java/org/scilab/modules/xcos/utils/XcosMessages.java, line: 168
+# File: src/java/org/scilab/modules/xcos/utils/XcosMessages.java, line: 170
 msgid "Link Style"
+msgstr ""
+#
+# File: src/java/org/scilab/modules/xcos/utils/XcosMessages.java, line: 202
+msgid "Loading diagram"
 msgstr ""
 #
 # File: src/java/org/scilab/modules/xcos/utils/XcosMessages.java, line: 108
@@ -300,7 +346,11 @@ msgstr ""
 msgid "Matrix"
 msgstr ""
 #
-# File: src/java/org/scilab/modules/xcos/utils/XcosMessages.java, line: 163
+# File: src/java/org/scilab/modules/xcos/utils/XcosMessages.java, line: 184
+msgid "Max integration time interval"
+msgstr ""
+#
+# File: src/java/org/scilab/modules/xcos/utils/XcosMessages.java, line: 165
 msgid "Middle"
 msgstr ""
 #
@@ -320,11 +370,11 @@ msgstr ""
 msgid "New palette"
 msgstr ""
 #
-# File: src/java/org/scilab/modules/xcos/utils/XcosMessages.java, line: 142
+# File: src/java/org/scilab/modules/xcos/utils/XcosMessages.java, line: 144
 msgid "No block selected"
 msgstr ""
 #
-# File: src/java/org/scilab/modules/xcos/utils/XcosMessages.java, line: 66
+# File: src/java/org/scilab/modules/xcos/utils/XcosMessages.java, line: 67
 msgid "Normal 100%"
 msgstr ""
 #
@@ -336,7 +386,7 @@ msgstr ""
 msgid "Open"
 msgstr ""
 #
-# File: src/java/org/scilab/modules/xcos/utils/XcosMessages.java, line: 67
+# File: src/java/org/scilab/modules/xcos/utils/XcosMessages.java, line: 68
 msgid "Palette browser"
 msgstr ""
 #
@@ -360,15 +410,23 @@ msgstr ""
 msgid "Quit"
 msgstr ""
 #
+# File: src/java/org/scilab/modules/xcos/utils/XcosMessages.java, line: 180
+msgid "Real time scaling"
+msgstr ""
+#
+# File: src/java/org/scilab/modules/xcos/utils/XcosMessages.java, line: 49
+msgid "Recent Files"
+msgstr ""
+#
 # File: src/java/org/scilab/modules/graph/utils/ScilabGraphMessages.java, line: 23
 msgid "Redo"
 msgstr ""
 #
-# File: src/java/org/scilab/modules/xcos/utils/XcosMessages.java, line: 56
+# File: src/java/org/scilab/modules/xcos/utils/XcosMessages.java, line: 57
 msgid "Region to superblock"
 msgstr ""
 #
-# File: src/java/org/scilab/modules/xcos/utils/XcosMessages.java, line: 59
+# File: src/java/org/scilab/modules/xcos/utils/XcosMessages.java, line: 60
 msgid "Remove"
 msgstr ""
 #
@@ -376,7 +434,7 @@ msgstr ""
 msgid "Resize"
 msgstr ""
 #
-# File: src/java/org/scilab/modules/xcos/utils/XcosMessages.java, line: 159
+# File: src/java/org/scilab/modules/xcos/utils/XcosMessages.java, line: 161
 msgid "Right"
 msgstr ""
 #
@@ -396,11 +454,15 @@ msgstr ""
 msgid "Save as interface function"
 msgstr ""
 #
-# File: src/java/org/scilab/modules/xcos/utils/XcosMessages.java, line: 61
+# File: src/java/org/scilab/modules/xcos/utils/XcosMessages.java, line: 62
 msgid "Save block GUI"
 msgstr ""
 #
-# File: sci_gateway/c/gw_xcos.c, line: 37
+# File: src/java/org/scilab/modules/xcos/utils/XcosMessages.java, line: 201
+msgid "Saving diagram"
+msgstr ""
+#
+# File: sci_gateway/c/gw_xcos.c, line: 39
 #, c-format
 msgid "Scilab '%s' module disabled in -nogui or -nwni mode.\n"
 msgstr ""
@@ -416,6 +478,18 @@ msgstr ""
 #
 # File: src/java/org/scilab/modules/xcos/utils/XcosMessages.java, line: 80
 msgid "Set Context"
+msgstr ""
+#
+# File: src/java/org/scilab/modules/xcos/utils/XcosMessages.java, line: 176
+msgid "Set Debug Level"
+msgstr ""
+#
+# File: src/java/org/scilab/modules/xcos/utils/XcosMessages.java, line: 190
+msgid "Set Parameters"
+msgstr ""
+#
+# File: src/java/org/scilab/modules/xcos/utils/XcosMessages.java, line: 175
+msgid "Set deugging level (0,1,2,3) </br> it performs scicos_debug(n)"
 msgstr ""
 #
 # File: src/java/org/scilab/modules/xcos/utils/XcosMessages.java, line: 76
@@ -438,8 +512,16 @@ msgstr ""
 msgid "Simulation"
 msgstr ""
 #
+# File: src/java/org/scilab/modules/xcos/utils/XcosMessages.java, line: 204
+msgid "Simulation in progress"
+msgstr ""
+#
 # File: src/java/org/scilab/modules/xcos/utils/XcosMessages.java, line: 115
 msgid "Sinks"
+msgstr ""
+#
+# File: src/java/org/scilab/modules/xcos/utils/XcosMessages.java, line: 185
+msgid "Solver 0 (CVODE) - 100 (IDA)"
 msgstr ""
 #
 # File: src/java/org/scilab/modules/xcos/utils/XcosMessages.java, line: 105
@@ -454,12 +536,16 @@ msgstr ""
 msgid "Stop"
 msgstr ""
 #
-# File: src/java/org/scilab/modules/xcos/utils/XcosMessages.java, line: 169
+# File: src/java/org/scilab/modules/xcos/utils/XcosMessages.java, line: 171
 msgid "Straight"
 msgstr ""
 #
-# File: src/java/org/scilab/modules/xcos/utils/XcosMessages.java, line: 57
+# File: src/java/org/scilab/modules/xcos/utils/XcosMessages.java, line: 58
 msgid "Superblock mask"
+msgstr ""
+#
+# File: src/java/org/scilab/modules/xcos/utils/XcosMessages.java, line: 195
+msgid "The Scilab Consortium / DIGITEO"
 msgstr ""
 #
 # File: src/java/org/scilab/modules/xcos/utils/XcosMessages.java, line: 127
@@ -476,11 +562,15 @@ msgstr ""
 msgid "Threshold"
 msgstr ""
 #
+# File: src/java/org/scilab/modules/xcos/utils/XcosMessages.java, line: 183
+msgid "Tolerance on time"
+msgstr ""
+#
 # File: src/java/org/scilab/modules/xcos/utils/XcosMessages.java, line: 92
 msgid "Tools"
 msgstr ""
 #
-# File: src/java/org/scilab/modules/xcos/utils/XcosMessages.java, line: 161
+# File: src/java/org/scilab/modules/xcos/utils/XcosMessages.java, line: 163
 msgid "Top"
 msgstr ""
 #
@@ -492,6 +582,10 @@ msgstr ""
 msgid "Undo"
 msgstr ""
 #
+# File: src/java/org/scilab/modules/xcos/utils/XcosMessages.java, line: 140
+msgid "Unknow Diagram Version : "
+msgstr ""
+#
 # File: src/java/org/scilab/modules/graph/ScilabGraph.java, line: 34
 msgid "Untitled"
 msgstr ""
@@ -500,25 +594,33 @@ msgstr ""
 msgid "User-Defined Functions"
 msgstr ""
 #
-# File: src/java/org/scilab/modules/xcos/utils/XcosMessages.java, line: 171
+# File: src/java/org/scilab/modules/xcos/utils/XcosMessages.java, line: 173
 msgid "Vertical"
 msgstr ""
 #
-# File: src/java/org/scilab/modules/xcos/utils/XcosMessages.java, line: 64
+# File: src/java/org/scilab/modules/xcos/utils/XcosMessages.java, line: 65
 msgid "View"
 msgstr ""
 #
-# File: src/java/org/scilab/modules/xcos/utils/XcosMessages.java, line: 51
+# File: src/java/org/scilab/modules/xcos/utils/XcosMessages.java, line: 52
 msgid "View in Scicos"
 msgstr ""
 #
-# File: src/java/org/scilab/modules/xcos/utils/XcosMessages.java, line: 69
+# File: src/java/org/scilab/modules/xcos/utils/XcosMessages.java, line: 70
 msgid "Viewport"
 msgstr ""
 #
-# File: src/java/org/scilab/modules/xcos/utils/XcosMessages.java, line: 30
+# File: src/java/org/scilab/modules/xcos/utils/XcosMessages.java, line: 141
+msgid "Will try to continue..."
+msgstr ""
+#
 # File: demos/xcos_demos.sce, line: 23
+# File: src/java/org/scilab/modules/xcos/utils/XcosMessages.java, line: 30
 msgid "Xcos"
+msgstr ""
+#
+# File: src/java/org/scilab/modules/xcos/utils/XcosMessages.java, line: 193
+msgid "Xcos 1.0"
 msgstr ""
 #
 # File: src/java/org/scilab/modules/xcos/utils/XcosMessages.java, line: 99
@@ -529,7 +631,7 @@ msgstr ""
 msgid "Xcos Help"
 msgstr ""
 #
-# File: src/java/org/scilab/modules/xcos/utils/XcosMessages.java, line: 141
+# File: src/java/org/scilab/modules/xcos/utils/XcosMessages.java, line: 143
 msgid "Xcos error"
 msgstr ""
 #
@@ -553,6 +655,10 @@ msgstr ""
 msgid "Zoom Out"
 msgstr ""
 #
-# File: src/java/org/scilab/modules/xcos/utils/XcosMessages.java, line: 155
+# File: src/java/org/scilab/modules/xcos/utils/XcosMessages.java, line: 157
 msgid "control port must be connected to command port"
+msgstr ""
+#
+# File: src/java/org/scilab/modules/xcos/utils/XcosMessages.java, line: 188
+msgid "maximum step size (0 means no limit)"
 msgstr ""
